--- a/examples/convert_to_light.ipynb
+++ b/examples/convert_to_light.ipynb
@@ -2,42 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "\n",
-    "model = load_model('Ukrainian_OCR_extended_Resnet_with_digits_with_correct_fonts.h5')"
+    "model = load_model('Ukrainian_OCR_tf_2.1.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 31). These functions will not be directly callable after loading.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\vvlad\\AppData\\Local\\Temp\\tmpztk1b9fd\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\vvlad\\AppData\\Local\\Temp\\tmpztk1b9fd\\assets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -47,27 +25,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1368832"
+       "1373168"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "open('Ukrainian_OCR.tflite', 'wb').write(tflite_model)"
+    "open('Ukrainian_OCR_tf_2.1.tflite', 'wb').write(tflite_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +70,7 @@
     "    image = np.array([int(x) for x in row[1:]], dtype=\"uint8\")\n",
     "    \n",
     "    #Reshaping image to 28 x 28 pixels\n",
-    "    image = image.reshape((28, 28))\n",
+    "    image = image.reshape((32, 32))\n",
     "    \n",
     "    #append image to data\n",
     "    data.append(image)\n",
@@ -111,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "(Data, Labels) = load_dataset(\"../data/uaset_extended_with_digits_fixed.csv\")"
+    "(Data, Labels) = load_dataset(\"../data/uaset_extended_lower_case.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,110 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           А       0.96      0.92      0.94       145\n",
-      "           Б       0.95      0.97      0.96       146\n",
-      "           В       0.93      0.97      0.95       145\n",
-      "           Г       0.97      0.95      0.96       145\n",
-      "           Ґ       0.92      0.97      0.94       146\n",
-      "           Д       0.93      0.97      0.95       145\n",
-      "           Е       0.94      0.96      0.95       146\n",
-      "           Є       0.85      1.00      0.92       146\n",
-      "           Ж       0.91      0.99      0.94       145\n",
-      "           З       0.89      0.62      0.73       145\n",
-      "           И       0.93      0.97      0.95       146\n",
-      "           І       0.90      0.95      0.92       145\n",
-      "           Ї       0.93      0.98      0.96       146\n",
-      "           Й       0.93      0.97      0.95       145\n",
-      "           К       0.95      0.96      0.95       145\n",
-      "           Л       0.95      0.94      0.94       146\n",
-      "           М       0.96      0.95      0.96       145\n",
-      "           Н       0.95      0.95      0.95       146\n",
-      "           О       0.69      0.95      0.80       146\n",
-      "           П       0.97      0.90      0.94       145\n",
-      "           Р       0.93      0.94      0.93       145\n",
-      "           С       0.90      0.98      0.94       145\n",
-      "           Т       0.90      0.98      0.94       145\n",
-      "           У       0.85      0.92      0.89       145\n",
-      "           Ф       0.96      0.90      0.93       145\n",
-      "           Х       0.91      0.94      0.93       145\n",
-      "           Ц       0.92      0.99      0.95       146\n",
-      "           Ч       0.94      0.95      0.95       145\n",
-      "           Ш       0.93      0.98      0.95       146\n",
-      "           Щ       0.94      0.95      0.94       146\n",
-      "           Ь       0.92      0.99      0.95       146\n",
-      "           Ю       0.94      0.96      0.95       146\n",
-      "           Я       0.90      0.98      0.94       146\n",
-      "           а       0.96      0.94      0.95       145\n",
-      "           б       0.97      0.94      0.96       145\n",
-      "           в       0.98      0.91      0.94       145\n",
-      "           г       0.93      0.97      0.95       145\n",
-      "           ґ       0.97      0.90      0.93       146\n",
-      "           д       0.93      0.93      0.93       146\n",
-      "           е       0.95      0.93      0.94       146\n",
-      "           є       1.00      0.83      0.91       145\n",
-      "           ж       0.98      0.90      0.94       146\n",
-      "           з       0.95      0.93      0.94       145\n",
-      "           и       0.97      0.92      0.94       146\n",
-      "           і       0.95      0.94      0.94       145\n",
-      "           ї       0.97      0.93      0.95       145\n",
-      "           й       0.96      0.92      0.94       146\n",
-      "           к       0.96      0.94      0.95       145\n",
-      "           л       0.93      0.95      0.94       146\n",
-      "           м       0.95      0.96      0.96       145\n",
-      "           н       0.94      0.94      0.94       145\n",
-      "           о       0.93      0.91      0.92       145\n",
-      "           п       0.91      0.97      0.94       146\n",
-      "           р       0.94      0.92      0.93       145\n",
-      "           с       0.98      0.90      0.94       145\n",
-      "           т       0.98      0.90      0.94       145\n",
-      "           у       0.92      0.83      0.87       145\n",
-      "           ф       0.91      0.96      0.93       146\n",
-      "           х       0.94      0.91      0.92       145\n",
-      "           ц       0.99      0.91      0.95       145\n",
-      "           ч       0.95      0.95      0.95       146\n",
-      "           ш       0.96      0.92      0.94       145\n",
-      "           щ       0.95      0.93      0.94       145\n",
-      "           ь       0.99      0.91      0.95       145\n",
-      "           ю       0.96      0.94      0.95       145\n",
-      "           я       0.98      0.90      0.94       145\n",
-      "           1       0.99      0.96      0.98       146\n",
-      "           2       1.00      1.00      1.00       145\n",
-      "           3       0.72      0.95      0.81       146\n",
-      "           4       1.00      0.99      1.00       146\n",
-      "           5       1.00      1.00      1.00       145\n",
-      "           6       1.00      1.00      1.00       145\n",
-      "           7       1.00      1.00      1.00       145\n",
-      "           8       0.98      1.00      0.99       145\n",
-      "           9       1.00      1.00      1.00       146\n",
-      "           0       0.94      0.60      0.73       146\n",
-      "           №       0.98      0.96      0.97       145\n",
-      "           %       1.00      0.99      1.00       145\n",
-      "           @       1.00      0.97      0.98       145\n",
-      "           ,       1.00      1.00      1.00       145\n",
-      "           .       1.00      1.00      1.00       145\n",
-      "           ?       1.00      1.00      1.00       145\n",
-      "           :       1.00      1.00      1.00       145\n",
-      "           ;       1.00      1.00      1.00       145\n",
-      "           \"       0.99      0.99      0.99       145\n",
-      "           !       1.00      0.99      1.00       145\n",
-      "           (       1.00      0.99      0.99       145\n",
-      "           )       1.00      0.99      1.00       146\n",
-      "           -       0.99      1.00      1.00       146\n",
-      "           '       0.95      0.99      0.97       145\n",
-      "\n",
-      "    accuracy                           0.95     13082\n",
-      "   macro avg       0.95      0.95      0.95     13082\n",
-      "weighted avg       0.95      0.95      0.95     13082\n",
-      "\n"
+     "ename": "ValueError",
+     "evalue": "Number of classes, 89, does not match size of target_names, 90. Try specifying the labels parameter",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m     predictions\u001b[39m.\u001b[39mappend(batch_pre)\n\u001b[0;32m     15\u001b[0m predictions \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mvstack(predictions)\n\u001b[1;32m---> 16\u001b[0m \u001b[39mprint\u001b[39m(classification_report(testY\u001b[39m.\u001b[39;49margmax(axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m),\n\u001b[0;32m     17\u001b[0m \tpredictions\u001b[39m.\u001b[39;49margmax(axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m), target_names\u001b[39m=\u001b[39;49mlabelNames))\n",
+      "File \u001b[1;32md:\\programming\\miniconda\\envs\\DeepLearning\\lib\\site-packages\\sklearn\\metrics\\_classification.py:2332\u001b[0m, in \u001b[0;36mclassification_report\u001b[1;34m(y_true, y_pred, labels, target_names, sample_weight, digits, output_dict, zero_division)\u001b[0m\n\u001b[0;32m   2326\u001b[0m         warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m   2327\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mlabels size, \u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39m, does not match size of target_names, \u001b[39m\u001b[39m{1}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[0;32m   2328\u001b[0m                 \u001b[39mlen\u001b[39m(labels), \u001b[39mlen\u001b[39m(target_names)\n\u001b[0;32m   2329\u001b[0m             )\n\u001b[0;32m   2330\u001b[0m         )\n\u001b[0;32m   2331\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 2332\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   2333\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mNumber of classes, \u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39m, does not match size of \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2334\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mtarget_names, \u001b[39m\u001b[39m{1}\u001b[39;00m\u001b[39m. Try specifying the labels \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2335\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mparameter\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39mlen\u001b[39m(labels), \u001b[39mlen\u001b[39m(target_names))\n\u001b[0;32m   2336\u001b[0m         )\n\u001b[0;32m   2337\u001b[0m \u001b[39mif\u001b[39;00m target_names \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   2338\u001b[0m     target_names \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m l \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m labels]\n",
+      "\u001b[1;31mValueError\u001b[0m: Number of classes, 89, does not match size of target_names, 90. Try specifying the labels parameter"
      ]
     }
    ],
@@ -324,7 +211,7 @@
     "\n",
     "# define the list of label names\n",
     "\n",
-    "labelNames = \"АБВГҐДЕЄЖЗИІЇЙКЛМНОПРСТУФХЦЧШЩЬЮЯабвгґдеєжзиіїйклмнопрстуфхцчшщьюя1234567890№%@,.?:;\\\"!()-'\"\n",
+    "alphabet = list('абвгґдеєжзиіїйклмнопрстуфхцчшщьюя1234567890№%@,.?:;\"!()-\\'АБВГҐДЕЄЖЗИІЇЙКЛМНОПРСТУФХЦЧШЩЬЮЯ')\n",
     "labelNames = [l for l in labelNames]\n",
     "\n",
     "# Make predictions on test data\n",
@@ -341,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
