--- a/examples/leaning.ipynb
+++ b/examples/leaning.ipynb
@@ -788,83 +788,30 @@
    "source": [
     "import tensorflow as tf\n",
     "\n",
-    "model = tf.keras.models.load_model('Ukrainian_OCR_tf_2.1_corrected_lower_case.h5')"
+    "model = tf.keras.models.load_model('Ukrainian_OCR_tf_2.1.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] evaluating network...\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           а       0.99      0.93      0.96        92\n",
-      "           б       1.00      0.97      0.98        91\n",
-      "           в       0.99      1.00      0.99        91\n",
-      "           г       0.99      0.99      0.99        91\n",
-      "           ґ       0.97      0.99      0.98        91\n",
-      "           д       0.98      0.96      0.97        91\n",
-      "           е       0.97      0.97      0.97        91\n",
-      "           є       1.00      0.97      0.98        91\n",
-      "           ж       1.00      1.00      1.00        91\n",
-      "           з       0.85      0.84      0.84        91\n",
-      "           и       0.84      0.97      0.90        91\n",
-      "           і       0.72      0.89      0.80        91\n",
-      "           ї       0.87      0.67      0.76        92\n",
-      "           й       1.00      0.79      0.88        91\n",
-      "           к       1.00      0.98      0.99        90\n",
-      "           л       0.98      1.00      0.99        91\n",
-      "           м       0.97      1.00      0.98        90\n",
-      "           н       0.98      1.00      0.99        91\n",
-      "           о       0.91      0.66      0.76        91\n",
-      "           п       0.99      0.99      0.99        91\n",
-      "           р       0.99      1.00      0.99        91\n",
-      "           с       0.98      0.98      0.98        91\n",
-      "           т       1.00      0.93      0.97        91\n",
-      "           у       0.98      0.99      0.98        90\n",
-      "           ф       1.00      0.98      0.99        91\n",
-      "           х       1.00      0.99      0.99        91\n",
-      "           ц       0.98      0.98      0.98        91\n",
-      "           ч       1.00      0.99      0.99        91\n",
-      "           ш       0.99      1.00      0.99        92\n",
-      "           щ       1.00      0.97      0.98        92\n",
-      "           ь       1.00      0.99      0.99        91\n",
-      "           ю       1.00      0.99      0.99        91\n",
-      "           я       0.98      0.98      0.98        91\n",
-      "           1       0.95      0.89      0.92        46\n",
-      "           2       1.00      0.98      0.99        46\n",
-      "           3       0.70      0.72      0.71        46\n",
-      "           4       1.00      0.98      0.99        45\n",
-      "           5       1.00      1.00      1.00        45\n",
-      "           6       1.00      1.00      1.00        46\n",
-      "           7       1.00      0.98      0.99        45\n",
-      "           8       1.00      0.96      0.98        45\n",
-      "           9       0.98      1.00      0.99        45\n",
-      "           0       0.56      0.93      0.70        45\n",
-      "           №       1.00      0.89      0.94        44\n",
-      "           %       1.00      1.00      1.00        45\n",
-      "           @       1.00      0.96      0.98        45\n",
-      "           ,       0.46      0.63      0.53        46\n",
-      "           .       0.12      0.02      0.04        46\n",
-      "           ?       0.98      0.98      0.98        46\n",
-      "           :       0.45      0.96      0.61        46\n",
-      "           ;       0.23      0.07      0.10        46\n",
-      "           \"       0.90      0.64      0.75        44\n",
-      "           !       0.83      0.96      0.89        45\n",
-      "           (       1.00      0.98      0.99        45\n",
-      "           )       1.00      1.00      1.00        45\n",
-      "           -       0.85      1.00      0.92        45\n",
-      "           '       0.53      0.93      0.68        44\n",
-      "\n",
-      "    accuracy                           0.92      4090\n",
-      "   macro avg       0.90      0.91      0.90      4090\n",
-      "weighted avg       0.93      0.92      0.92      4090\n",
-      "\n"
+      "[INFO] evaluating network...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[39m# evaluate the network\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m[INFO] evaluating network...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> 9\u001b[0m predictions \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(testX, batch_size\u001b[39m=\u001b[39mBS)\n\u001b[0;32m     10\u001b[0m \u001b[39mprint\u001b[39m(classification_report(testY\u001b[39m.\u001b[39margmax(axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m),\n\u001b[0;32m     11\u001b[0m \tpredictions\u001b[39m.\u001b[39margmax(axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m), target_names\u001b[39m=\u001b[39mlabelNames))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
      ]
     }
    ],
